layout issue

--- a/src/styles/pages/articles.scss
+++ b/src/styles/pages/articles.scss
@@ -1,4 +1,4 @@
-.page-articles {
+main .page-articles {
   padding: 70px 16px 0;
   .visibility-sensor.isVisible ~ .filters .fader {
     animation: fadeInSide 450ms $smoothTransition;
