--- a/src/styles/pages/single-article.scss
+++ b/src/styles/pages/single-article.scss
@@ -1,5 +1,5 @@
-.post,
-.page {
+main .post,
+main .page {
   padding-top: 70px;
   .post-cover {
     margin: 0 auto 40px;
